--- a/external/print_os_full.html
+++ b/external/print_os_full.html
@@ -106,6 +106,11 @@
 
         const { order, cliente, evento, itens, services, payments } = data.details;
 
+        const qrUrl = `https://bionetecnologia.com.br/os/${order.documento}`;
+        const qrEncoded = encodeURIComponent(qrUrl);
+        const qrImg = `https://chart.googleapis.com/chart?chs=100x100&cht=qr&chl=${qrEncoded}`;
+
+
         let html = `
             <div class="header">
                 <div>
@@ -115,6 +120,7 @@
                     <div><b>Telefone:</b> ${cliente.telefone}</div>
                     <div><b>Email:</b> ${cliente.email}</div>
                 </div>
+                <div><img src="${qrImg}" style="max-width: 100px;"></div>
                 <div><img src="imagens/logo_os.png"></div>
             </div>
             <center><h2>${order.documento}</h2></center>
