--- a/external/listEventos.html
+++ b/external/listEventos.html
@@ -47,7 +47,7 @@
             </div>
             <br>
             <div class="table-responsive">
-                <table class="table table-bordered table-striped" id="tabela-eventos">
+                <table class="table table-striped table-hover" id="tabela-eventos">
                     <thead>
                     <tr>
                         <th>Nome</th>
@@ -95,7 +95,7 @@
                         <div id="dadosEventoContainer"></div>
                     </div>
                     <div role="tabpanel" class="tab-pane" id="ordensServico">
-                        <table class="table table-bordered table-sm" id="tabelaOrdens">
+                        <table class="table table-striped table-hover table-sm" id="tabelaOrdens">
                             <thead>
                             <tr>
                                 <th>Documento</th>
