--- a/external/createOrder.html
+++ b/external/createOrder.html
@@ -27,9 +27,12 @@
     </div>
 
     <div class="card">
-        <div class="header">
+        <div class="header" style="position: relative;">
             <h2>Dados da Ordem</h2>
+            <button class="btn btn-success" onclick="retornarLista()" style="position: absolute; top: 10px; right: 10px;">Retornar Lista</button>
         </div>
+
+
         <div class="body">
             <form id="form-ordem">
                 <div class="row">
