--- a/external/listOrdem.html
+++ b/external/listOrdem.html
@@ -154,7 +154,7 @@
 
         try {
             const res = await axios.post(baseUrl, {
-                method: 'updateStatusByDocumento',
+                method: 'updateStatusOrderByDocumento',
                 token,
                 data: {
                     documento,
