--- a/external/listOrdem.html
+++ b/external/listOrdem.html
@@ -551,7 +551,8 @@
             const response = await fetch(urlPdfAtual);
             const blob = await response.blob();
 
-            const file = new File([blob], 'documento.pdf', { type: 'application/pdf' });
+            const fileName = urlPdfAtual.split('/').pop() || 'documento.pdf';
+            const file = new File([blob], fileName, { type: 'application/pdf' });
 
             if (!navigator.canShare || !navigator.canShare({ files: [file] })) {
                 return Swal.fire('Aviso', 'Seu navegador não suporta compartilhamento de arquivos.', 'warning');
