--- a/external/listOrdem.html
+++ b/external/listOrdem.html
@@ -102,20 +102,30 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body p-0" style="height: 90vh;">
-                <iframe id="iframePdfFatura" style="width: 100%; height: 100%; border: none;"></iframe>
-            </div>
-            <div class="modal-footer d-flex justify-content-between">
-                <div>
-                    <button class="btn btn-success" onclick="baixarPdfAtual()">📥 Baixar</button>
-                    <button class="btn btn-info" onclick="imprimirPdfAtual()">🖨️ Imprimir</button>
-                    <button class="btn btn-primary" onclick="compartilharPdfAtual()">🔗 Compartilhar</button>
+
+            <!-- Botões acima do PDF -->
+            <div class="modal-body p-0" style="height: 90vh; display: flex; flex-direction: column;">
+                <center>
+                <div class="d-flex justify-content-center p-3 border-bottom" style="gap: 20px;">
+                    <button class="btn btn-success btn-lg px-4 d-flex align-items-center justify-content-center" style="min-width: 180px;" onclick="baixarPdfAtual()">
+                        <span class="mr-2">Baixar</span> <i class="fa-solid fa-download"></i>
+                    </button>
+                    <button class="btn btn-info btn-lg px-4 d-flex align-items-center justify-content-center" style="min-width: 180px;" onclick="imprimirPdfAtual()">
+                        <span class="mr-2">Imprimir</span> <i class="fa-solid fa-print"></i>
+                    </button>
+                    <button class="btn btn-primary btn-lg px-4 d-flex align-items-center justify-content-center" style="min-width: 180px;" onclick="compartilharPdfAtual()">
+                        <span class="mr-2">Compartilhar</span> <i class="fa-solid fa-share"></i>
+                    </button>
                 </div>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                </center>
+                <br>
+
+                <iframe id="iframePdfFatura" style="flex: 1; width: 100%; border: none;"></iframe>
             </div>
         </div>
     </div>
 </div>
+
 
 
 
@@ -251,7 +261,7 @@
 
                 // Exportar Detalhada
                 const colDetalhada = hasPermition
-                    ? `<a href="#" onclick="event.stopPropagation(); exportarOrdemDetalhada('${ordem.documento}')" title="Exportar Detalhada">
+                    ? `<a href="#" onclick="event.stopPropagation(); exportarOrdemDetalhada('${ordem.documento}')" title="Proposta Detalhada">
                         <i class="fas fa-file-alt blue"></i>
                    </a>`
                     : '';
@@ -261,7 +271,7 @@
                 <tr onclick="abrirModalOrdem('${ordem.documento}')" style="cursor: pointer;">
                     <td class="text-center">${colEditar}</td>
                     <td class="text-center">
-                        <a href="#" onclick="event.stopPropagation(); exportarOrdem('${ordem.documento}')" title="Exportar OS">
+                        <a href="#" onclick="event.stopPropagation(); exportarOrdem('${ordem.documento}')" title="Ordem de Serviço">
                             <i class="fas fa-file-pdf red"></i>
                         </a>
                     </td>
