--- a/external/listOrdem.html
+++ b/external/listOrdem.html
@@ -31,19 +31,19 @@
         </div>
         <div class="body">
             <div class="row" style="margin-bottom: 10px;">
-                <div class="col-md-4">
+                <div class="col-sm-3">
                     <label for="filtroOS">Filtro</label>
                     <input type="text" id="filtroOS" class="form-control" placeholder="Filtrar por cliente ou evento">
                 </div>
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <label for="dataInicio">Data Início</label>
                     <input type="date" id="dataInicio" class="form-control">
                 </div>
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <label for="dataFim">Data Fim</label>
                     <input type="date" id="dataFim" class="form-control">
                 </div>
-                <div class="col-md-4 text-right d-flex align-items-end justify-content-end">
+                <div class="col-sm-2 text-right d-flex align-items-end justify-content-end">
                     <button class="btn btn-success" id="btnListModelo" style="margin-top: 24px;">Nova Ordem</button>
                 </div>
             </div>
