--- a/external/createOrder.html
+++ b/external/createOrder.html
@@ -14,10 +14,10 @@
     <script src="bsb/plugins/bootstrap/js/bootstrap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/313adf4cdc.js" crossorigin="anonymous"></script>
+
 
 </head>
 <body class="theme-blue">
@@ -285,10 +285,12 @@
 
 <!-- Modais de cliente, evento, item, serviço e pagamento serão incluídos depois -->
 
-<script src="bsb/plugins/jquery/jquery.min.js"></script>
 <script src="bsb/plugins/bootstrap/js/bootstrap.js"></script>
 <script src="bsb/plugins/sweetalert/sweetalert.min.js"></script>
 <script src="https://kit.fontawesome.com/313adf4cdc.js" crossorigin="anonymous"></script>
 <script src="js/ordem-servico.js"></script>
+<script src="bsb/plugins/jquery-inputmask/jquery.inputmask.bundle.js"></script>
+
+
 </body>
 </html>
