--- a/external/createCliente.html
+++ b/external/createCliente.html
@@ -301,6 +301,18 @@
 
 
     });
+    function cleanCpfCnpj(value) {
+        return value.replace(/\D/g, '');
+    }
+    function cleanCep(value) {
+        return value.replace(/\D/g, '');
+    }
+
+    function cleanTelefone(value) {
+        return value.replace(/\D/g, '');
+    }
+
+
 </script>
 
 </html>
