--- a/external/createCliente.html
+++ b/external/createCliente.html
@@ -270,7 +270,7 @@
             }
 
             const body = {
-                token: requestToken,
+                token: token,
                 method: 'createCliente',
                 data: {
                     nome,
